# timesheet-manipulator

./: Cargo.toml  bun.lockb  package.json
src/: main.rs  parser.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  parser.rs
src/routes/: +layout.svelte  +page.svelte
